TAG: mgidbmigration-6-0-22-17
TAG: mgidbmigration-6-0-22-16
DATE: 11/10/2022, 11/14/2022
STAFF: lec
wts2-888/SQA: PWI/Custom Reports/PWI_Report obsolete
added /procedure/PRB_processAnonymousSource_create.object to migration

TAG: mgidbmigration-6-0-22-15
TAG: mgidbmigration-6-0-22-14
TAG: mgidbmigration-6-0-22-13
DATE: 10/14/2022
STAFF: lec
wts2-888/PWI: Move Remaining Pages from Flask+SQLAlchemy to Angular+Java API

TAG: mgidbmigration-6-0-22-12
TAG: mgidbmigration-6-0-22-11
DATE: 09/13/2022
STAFF: sc
WTS2-492 - new table gxd_htsample_rnaseqset_cache
         - load the cache table

TAG: mgidbmigration-6-0-22-10
TAG: mgidbmigration-6-0-22-9
DATE: 08/22/2022, 08/25/2022
STAFF: lec
wts2-761/MGD db cleanup - gxd vocabs -> voc_vocab/voc_term

TAG: mgidbmigration-6-0-22-8
DATE: 08/16/2022
STAFF: lec
wts2-761/MGD db cleanup - gxd vocabs -> voc_vocab/voc_term

TAG: mgidbmigration-6-0-22-7
TAG: mgidbmigration-6-0-22-6
DATE: 08/04/2022
STAFF: lec
wts2-947/Allow use of IEP as evidence code for GO annotations in all annotation loads

TAG: mgidbmigration-6-0-22-5
DATE: 08/01/2022
STAFF: lec
wts2-646/Switch load of Human gene to disease associations to use the Alliance file.
reinstall DP_EntrezGene_MIM

--STAFF: lec
--wts2-761/MGD db cleanup - gxd vocabs -> voc_vocab/voc_term

TAG: mgidbmigration-6-0-22-4
TAG: mgidbmigration-6-0-22-3
DATE: 07/28/2022
STAFF: lec
wts2-761/crm-344/MGD db cleanup - obsolete pgradardbschema

TAG: mgidbmigration-6-0-22-2
TAG: mgidbmigration-6-0-22-1
TAG: mgidbmigration-6-0-21-5
TAG: mgidbmigration-6-0-21-4
DATE: 07/21/2022, 07/25/2022
STAFF: lec
wts2-646/Switch load of Human gene to disease associations to use the Alliance file.

TAG: mgidbmigration-6-0-21-3
DATE: 07/19/2022
STAFF: lec
wts2-940/PWI/Strain : add Private = Yes validation
added test/probesource.csh
added GXD_HTExperiment to key/PRB_Source

TAG: mgidbmigration-6-0-21-2
TAG: mgidbmigration-6-0-21-1
DATE: 07/01/2022, 07/05/2022
STAFF: lec