@@ -17,8 +17,8 @@ date | tee -a $LOG
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0 | tee -a $LOG
 
 delete from VOC_Term where _vocab_key in (166,135);
-insert into VOC_Term values((select max(_Term_key) + 1 from VOC_Term), 166, 'embryo',null,1,0,1001,1001,now(),now());
-insert into VOC_Term values((select max(_Term_key) + 1 from VOC_Term), 166, 'the expression of',null,2,0,1001,1001,now(),now());
+insert into VOC_Term values((select max(_Term_key) + 1 from VOC_Term),166,'embryo',null,null,1,0,1001,1001,now(),now());
+insert into VOC_Term values((select max(_Term_key) + 1 from VOC_Term),166,'the expression of',null,null,2,0,1001,1001,now(),now());
 
 --insert into VOC_Term values(
 --(select max(_Term_key) + 1 from VOC_Term),
@@ -27,7 +27,7 @@ insert into VOC_Term values((select max(_Term_key) + 1 from VOC_Term), 166, 'the
 
 EOSQL
 
-vocabulary.py | tee -a $LOG
+${PYTHON} vocabulary.py | tee -a $LOG
 
 date |tee -a $LOG
 
