@@ -1,3 +1,8 @@
+TAG: mgidbmigration-6-0-22-18
+DATE: 11/18/2022
+STAFF: lec
+fl2-gxd/add new vocabulary/no terms yet
+
 TAG: mgidbmigration-6-0-22-17
 TAG: mgidbmigration-6-0-22-16
 DATE: 11/10/2022, 11/14/2022
